# InterOp

./: .gitignore  README.md
.github/: CODEOWNERS
bfia/mesh/: README.md
bfia/mesh/api/: Specifications.md  Specifications_CN.md  advance.md  mesh.http.md  mesh.http.swagger.yaml  mesh.x.proto  mesh.x.swagger.json  mesh.y.proto  mesh.y.swagger.json  transport.py
bfia/mesh/examples/: a.py  b.py  party_a_pyenv.sh  party_a_setup.sh  party_a_weave.sh  party_b_setup.sh  party_b_weave.sh  pyproject.toml
bfia/tensor_serving/: README.md
bfia/tensor_serving/api/: secure_operate.proto  secure_operate.swagger.json
bfia/tensor_serving/examples/: define_parties.py  test_distance.py  test_equal.py  test_execute_and_kill.py  test_execute_and_query.py  test_expressions.py  test_greater.py  test_less.py  test_matmul.py  test_mvm.py  test_vds.py
互联互通API接口规范/: README.md
互联互通API接口规范/1.管理层接口/: README.md  隐私计算互联互通管理层API.md
互联互通API接口规范/2.控制层接口/: README.md  隐私计算互联互通控制层API.md
互联互通API接口规范/3.算法组件层接口/: README.md  隐私计算互联互通算法组件层API.md
互联互通API接口规范/4.传输层接口/: README.md  隐私计算互联互通传输层API.md
互联互通API接口规范/4.传输层接口/examples/: 传输相关参考实现.md
互联互通API接口规范/5.开放算法协议/: README.md  隐私计算互联互通开放算法协议.md
互联互通API接口规范/5.开放算法协议/examples/: 开放算法协议ECDH-PSI算法实现示例.md
互联互通API接口规范/6.TEE统一远程证明协议/: README.md  隐私计算互联互通TEE统一远程证明API.md  隐私计算互联互通TEE统一远程证明指引.md  隐私计算互联互通可信执行环境（TEE）统一远程证明API.md  隐私计算互联互通可信执行环境（TEE）统一远程证明对接指引.md
互联互通集成对接指引/: README.md  互联互通集成对接指引.md
